[gd_scene load_steps=2 format=3 uid="uid://dgx8k3m5vxapn"]

[ext_resource type="Script" path="res://scripts/ui/deck_builder.gd" id="1_deck_builder"]

[node name="DeckBuilder" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_deck_builder")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.15, 0.2, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Header" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/Header"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "< BACK"

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 48
text = "DECK BUILDER"
horizontal_alignment = 1

[node name="DeckSelector" type="OptionButton" parent="MarginContainer/VBoxContainer/Header"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(200, 0)
theme_override_font_sizes/font_size = 20

[node name="NewDeckButton" type="Button" parent="MarginContainer/VBoxContainer/Header"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "NEW"

[node name="DeleteDeckButton" type="Button" parent="MarginContainer/VBoxContainer/Header"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "DELETE"

[node name="SetActiveButton" type="Button" parent="MarginContainer/VBoxContainer/Header"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "SET AS ACTIVE"

[node name="DeckInfo" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="DeckNameEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/DeckInfo"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
placeholder_text = "Deck Name"

[node name="CardCount" type="Label" parent="MarginContainer/VBoxContainer/DeckInfo"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "0 / 30"
horizontal_alignment = 2

[node name="ValidationLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
text = ""
horizontal_alignment = 1

[node name="ContentArea" type="HSplitContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CollectionPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer/ContentArea"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ContentArea/CollectionPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ContentArea/CollectionPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "COLLECTION"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/ContentArea/CollectionPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CollectionGrid" type="GridContainer" parent="MarginContainer/VBoxContainer/ContentArea/CollectionPanel/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 5

[node name="DeckPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer/ContentArea"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ContentArea/DeckPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ContentArea/DeckPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "CURRENT DECK"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/ContentArea/DeckPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="DeckGrid" type="GridContainer" parent="MarginContainer/VBoxContainer/ContentArea/DeckPanel/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 5

[node name="NewDeckDialog" type="AcceptDialog" parent="."]
unique_name_in_owner = true
title = "Create New Deck"
initial_position = 2
size = Vector2i(400, 150)

[node name="VBoxContainer" type="VBoxContainer" parent="NewDeckDialog"]
offset_left = 8.0
offset_top = 8.0
offset_right = 392.0
offset_bottom = 101.0

[node name="Label" type="Label" parent="NewDeckDialog/VBoxContainer"]
layout_mode = 2
text = "Enter deck name:"

[node name="DeckNameInput" type="LineEdit" parent="NewDeckDialog/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "My Deck"

[node name="ConfirmDeleteDialog" type="ConfirmationDialog" parent="."]
unique_name_in_owner = true
title = "Delete Deck"
initial_position = 2
size = Vector2i(300, 100)
dialog_text = "Are you sure you want to delete this deck?"

[node name="CardDetailPopup" type="PopupPanel" parent="."]
unique_name_in_owner = true
initial_position = 2
size = Vector2i(400, 500)

[node name="MarginContainer" type="MarginContainer" parent="CardDetailPopup"]
offset_left = 4.0
offset_top = 4.0
offset_right = 396.0
offset_bottom = 496.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CardDetailPopup/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="CardNameLabel" type="Label" parent="CardDetailPopup/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Card Name"
horizontal_alignment = 1

[node name="RarityLabel" type="Label" parent="CardDetailPopup/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Rarity: Common"
horizontal_alignment = 1

[node name="TypeLabel" type="Label" parent="CardDetailPopup/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Type: Summon"
horizontal_alignment = 1

[node name="CostLabel" type="Label" parent="CardDetailPopup/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Cost: 3 Mana"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CardDetailPopup/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="DescriptionLabel" type="Label" parent="CardDetailPopup/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Card description goes here."
autowrap_mode = 3

[node name="HSeparator2" type="HSeparator" parent="CardDetailPopup/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ActionLabel" type="Label" parent="CardDetailPopup/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Click again to add to deck"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="CardDetailPopup/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CloseButton" type="Button" parent="CardDetailPopup/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "CLOSE"
